[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/orthogonal_player.gd" type="Script" id=1]
[ext_resource path="res://models/door_frame.obj" type="ArrayMesh" id=3]
[ext_resource path="res://door/TeleportArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/Settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://font/large.tres" type="DynamicFont" id=6]

[sub_resource type="CylinderShape" id=1]
radius = 0.5
height = 5.0

[sub_resource type="SphereShape" id=2]
radius = 4.5

[node name="Player2" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Pause" type="WindowDialog" parent="."]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7

[node name="List" type="VBoxContainer" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_right = -50.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Pause/List"]
margin_top = 45.0
margin_right = 309.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 6 )
text = "Settings"

[node name="QuitLevel" type="Button" parent="Pause/List"]
margin_top = 96.0
margin_right = 309.0
margin_bottom = 143.0
custom_fonts/font = ExtResource( 6 )
text = "Quit to Lobby"

[node name="Quit" type="Button" parent="Pause/List"]
margin_top = 147.0
margin_right = 309.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 6 )
text = "Quit to Menu"

[node name="Settings" parent="Pause" instance=ExtResource( 5 )]

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
shape = SubResource( 1 )

[node name="DoorFrame" type="CSGMesh" parent="."]
transform = Transform( 0.3, 0, 0, 0, 0.7, 0, 0, 0, 1, 0, 0, 0 )
layers = 2
cast_shadow = 0
mesh = ExtResource( 3 )

[node name="CarryDoor" type="Spatial" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.469846, 0.17101, 0, -0.17101, 0.469846, 0, 3.5, -2 )

[node name="TeleportArea" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.2, 0 )

[node name="InteractArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.2, -0.5 )
collision_mask = 0

[node name="Collision" type="CollisionShape" parent="InteractArea"]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 10 )

[node name="Camera" type="Camera" parent="Spatial"]
projection = 1
current = true
fov = 90.0
size = 20.0
near = 0.01
far = 1000.0
[connection signal="about_to_show" from="Pause" to="." method="_on_pause"]
[connection signal="popup_hide" from="Pause" to="." method="_on_unpause"]
[connection signal="pressed" from="Pause/List/Settings" to="Pause/Settings" method="popup"]
[connection signal="pressed" from="Pause/List/QuitLevel" to="." method="_on_quit_level"]
[connection signal="pressed" from="Pause/List/Quit" to="." method="_on_quit"]
